# bio-vault

./: Anchor.toml  README.md  check.mjs  init_comp.mjs
app/: index.html
app/src/: App.tsx
app/src/idl/: bio_vault.json  private_match.json  shadow_vote.json  veil_dao.json
artifacts/: circuits_hash.txt
encrypted-ixs/src/: lib.rs
programs/bio_vault/: Cargo.toml
programs/bio_vault/src/: lib.rs
programs/private_match/: Cargo.toml
programs/private_match/src/: lib.rs
programs/veil_dao/: Cargo.toml
programs/veil_dao/src/: lib.rs
